Added warning when started app on MacOs without required JVM option to support fullscreen (#176)